syntax = "proto3";

package berty.entity;

option go_package = "berty.tech/core/entity";

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "entity/contact.proto";
import "entity/device.proto";

message Config {
  //
  // gorm required fields
  //

  string id = 1 [(gogoproto.moretags) = "gorm:\"primary_key\"", (gogoproto.customname) = "ID"];
  google.protobuf.Timestamp created_at = 2 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
  google.protobuf.Timestamp updated_at = 3 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];

  //
  // myself
  //

  Contact myself = 5;
  string myself_id = 6 [(gogoproto.customname) = "MyselfID"];

  Device current_device = 7;
  string current_device_id = 8 [(gogoproto.customname) = "CurrentDeviceID"];

  bytes crypto_params = 9;

  bytes push_relay_id_apns = 10 [(gogoproto.customname) = "PushRelayIDAPNS"];
  bytes push_relay_id_fcm = 11 [(gogoproto.customname) = "PushRelayIDFCM"];
}
